--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2017",
+    "strictNullChecks": false,
     "lib": [
       "es2017",
       "esnext.asynciterable"
