--- a/ui2/package.json
+++ b/ui2/package.json
@@ -9,7 +9,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "private": true,
   "dependencies": {
@@ -24,7 +26,9 @@
     "@angular/platform-browser-dynamic": "17.0.0",
     "@angular/router": "17.0.0",
     "angular-in-memory-web-api": "~0.17.0",
+    "cypress": "^13.6.0",
     "rxjs": "~7.8.0",
+    "three": "^0.158.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.0"
   },
@@ -32,9 +36,12 @@
     "@angular-devkit/build-angular": "17.0.0",
     "@angular/cli": "17.0.0",
     "@angular/compiler-cli": "17.0.0",
+    "@cypress/schematic": "^2.5.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^16.11.35",
+    "@types/three": "^0.158.3",
     "copyfiles": "^2.4.1",
+    "cypress": "latest",
     "jasmine-core": "~5.1.0",
     "jasmine-marbles": "~0.9.2",
     "jasmine-spec-reporter": "~7.0.0",
@@ -46,6 +53,6 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "protractor": "~7.0.0",
     "ts-node": "~10.9.0",
-    "typescript": "~4.9.3"
+    "typescript": "~5.2.2"
   }
 }
