--- a/package.json
+++ b/package.json
@@ -87,6 +87,12 @@
     "tslint": "^6.1.3",
     "typescript": "^4.9.5"
   },
+    "type": "module",
+    "dependencies": {
+      "express": "^4.17.1",
+      "jsonwebtoken": "^8.5.1"
+    
+    },
   "bugs": {
     "url": "https://github.com/santiq/bulletproof-nodejs/issues"
   },
