--- a/authentication/Properties/launchSettings.json
+++ b/authentication/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "DDDSample1": {
+    "RobDroneGO": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
