--- a/authentication/appsettings.json
+++ b/authentication/appsettings.json
@@ -1,12 +1,11 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=vsgate-s1.dei.isep.ipp.pt;Port=11220;Database=sem5_pi;User=root;Password=M/ISRo5Wvz33;PersistSecurityInfo=True;ConvertZeroDateTime=True;AllowZeroDateTime=False;Pooling=true;Charset=utf8;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "test_2" :"Server=vsgate-s1.dei.isep.ipp.pt;user=postgres;port=11182;password=7KpvvJNFLeIG;",
-    "test2" :"Server=localhost;Database=master;Trusted_Connection=True;"
-  }
+  "AllowedHosts": "*"
 }
