forgotten appsettings for US20

--- a/authentication/appsettings.json
+++ b/authentication/appsettings.json
@@ -7,5 +7,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "hvkQVqwdqeaARucspooYjd81mcaz",
+    "Issuer": "https://localhost:5000",
+    "Audience": "https://localhost:5000"
+  }
 }
