--- a/authentication/DDDNetCore.csproj
+++ b/authentication/DDDNetCore.csproj
@@ -9,6 +9,8 @@
     
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.0" />
     
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
+    
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
