Atualizar dependencias angular (File-saver)

--- a/ui2/package.json
+++ b/ui2/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "17.0.0",
     "angular-in-memory-web-api": "~0.17.0",
     "cypress": "^13.6.0",
+    "file-saver": "^2.0.5",
     "rxjs": "~7.8.0",
     "three": "^0.158.0",
     "tslib": "^2.3.0",
@@ -37,6 +38,7 @@
     "@angular/cli": "17.0.0",
     "@angular/compiler-cli": "17.0.0",
     "@cypress/schematic": "^2.5.1",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^16.11.35",
     "@types/three": "^0.158.3",
