--- a/ui2/package.json
+++ b/ui2/package.json
@@ -25,8 +25,10 @@
     "@angular/platform-browser": "17.0.0",
     "@angular/platform-browser-dynamic": "17.0.0",
     "@angular/router": "17.0.0",
+    "@tweenjs/tween.js": "^21.0.0",
     "angular-in-memory-web-api": "~0.17.0",
     "cypress": "^13.6.0",
+    "dat.gui": "^0.7.9",
     "file-saver": "^2.0.5",
     "rxjs": "~7.8.0",
     "three": "^0.158.0",
