G55-19 Implementada GUI para seleção e teletransporte através de elevador.

--- a/ui2/package.json
+++ b/ui2/package.json
@@ -33,6 +33,7 @@
     "rxjs": "~7.8.0",
     "three": "^0.158.0",
     "tslib": "^2.3.0",
+    "tween.js": "^16.6.0",
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
