G55-49 Updated csproj file for dotnet tests

--- a/authentication/DDDNetCore.csproj
+++ b/authentication/DDDNetCore.csproj
@@ -3,6 +3,8 @@
 <PropertyGroup>
     <TargetFramework>netcoreapp6.0</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel> 
+     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute> 
   </PropertyGroup>
  
   <ItemGroup>
